changes Admin - Decaan en begin verwijderen decaan

--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -1,9 +1,21 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "DecaanOverzicht";
+    var db = Database.Open("authenticationData");
+    var selectedData = db.Query("SELECT UserProfile.UserId, UserName FROM UserProfile INNER JOIN webpages_UsersInRoles ON UserProfile.UserId=webpages_UsersInRoles.UserId WHERE RoleId=2");
+    var grid = new WebGrid(source: selectedData);
     
 }
 
 <a href="~/Admin/Decaan/DecaanToevoegen">
     <span class="glyphicon glyphicon-pencil"></span> Nieuwe decaan aanmaken
 </a>
+     <div style="padding: 30px">
+            @grid.GetHtml(
+            columns: grid.Columns(
+                grid.Column(format: @<a style="padding: 30px" href="~/Admin/Decaan/DecaanWijzigen?id=@item.UserId">Edit</a>),
+                grid.Column("UserName")
+                )
+            )
+    </div>
+
