Infernal Sun, Eternal Sea

--- a/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailToevoegen.cshtml
@@ -39,7 +39,7 @@
                 ModelState.AddFormError("Onderwerp wordt al gebruikt");
             }
             db.Close();
-            Response.Redirect("~/");
+            Response.Redirect("~/Decaan/Mail/MailOverzicht.cshtml");
         }
     }
 }
