--- a/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
+++ b/ComeniusCarrousel/Decaan/LeerlingDetails.cshtml
@@ -59,9 +59,9 @@
             <tr>
                 <td>Vakken:</td>
                 <td>
-                    @foreach (string vak in leerling.KeuzeVakken())
+                    @foreach (Tuple<string,int> vak in leerling.KeuzeVakken())
                     {
-                        <span>@vak</span>
+                        <span>@vak.Item1</span>
                     }
                 </td>
             </tr>
