--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -29,7 +29,7 @@
         alternatingRowStyle: "alt",
         columns: grid.Columns(
             grid.Column("Onderwerp"),
-            grid.Column(format: @<a href="~/Decaan/Mail/MailWijzigen?id=@item.MailId">&nbsp; Wijzig</a>)
+            grid.Column(format: @<a href="~/Decaan/Mail/MailWijzigen?MailId=@item.MailId">&nbsp; Wijzig</a>)
         
         ))
 
