--- a/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
@@ -1,15 +1,90 @@
 ﻿@{
-    
+   Layout = "~/_Layout.cshtml";
+    Page.Title = "Register";
+    Page.Description = "Add an account";
+    Page.ShowTitle = "false";
+
+    var userName = "";
+    var password = "";
+    var confirmPassword = "";
+
+    Validation.RequireField("userName", "U moet een gebruikersnaam invullen.");
+    Validation.RequireField("password", "Er moet een wachtwoord ingevuld worden.");
+    Validation.RequireField("confirmPassword", "Bevestegings wachtwoord mag niet leeg zijn.");
+    Validation.Add("confirmPassword",
+        Validator.EqualsTo("password", "Bevestegings wachtwoord komt niet overeen met het wachtwoord."));
+    Validation.Add("password",
+        Validator.StringLength(
+            maxLength: Int32.MaxValue,
+            minLength: 6,
+            errorMessage: "Wachtwoord moet minstens 6 tekens bevatten"));
+    Validation.Add("userName",
+        Validator.StringLength(
+            maxLength: 400,
+            errorMessage: "Uw e mail kan niet meer dan 400 tekens bevatten"));
+
+    if(IsPost)
+    {
+        AntiForgery.Validate();
+        userName = Request.Form["userName"];
+        password = Request.Form["password"];
+        confirmPassword = Request.Form["confirmPassword"];
+
+        if(Validation.IsValid())
+        {
+            var db = Database.Open(App.AuthDataBase);
+
+            var user = db.QuerySingle("SELECT UserName FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", userName);
+            if(user == null)
+            {
+                db.Execute("INSERT INTO UserProfile (UserName) VALUES (@0)", userName);
+
+                try
+                {
+                    var token = WebSecurity.CreateAccount(userName, password, false);
+                    Roles.AddUserToRole(userName, "Leerling");
+                    db.Close();
+                    Response.Redirect("~/Admin/Leerling/LeerlingOverzicht");
+                }
+                catch(System.Web.Security.MembershipCreateUserException e)
+                {
+                    db.Close();
+                    ModelState.AddFormError(e.Message);
+                }
+            }
+            else
+            {
+                ModelState.AddFormError("Gebruikersnaam bestaat al");
+            }
+            db.Close();
+        }
+    }
 }
 
-<!DOCTYPE html>
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+<div class="col-md-12">
+    <form method="post">
+        @AntiForgery.GetHtml()
+        @Html.ValidationSummary("Account creatie is mislukt, verhelp de fouten en probeer het opnieuw.", excludeFieldErrors: true, htmlAttributes: null)
+        <fieldset>
+            <h2>Register a new account</h2>
+            <div class="form-group">
+                <label for="userName">Email adres</label>
+                <input type="text" id="userName" name="userName" value="@userName" class="form-control">
+                @Html.ValidationMessage("userName")
+            </div>
+            <div class="form-group">
+                <label for="password">Wachtwoord</label>
+                <input type="password" id="password" name="password" value="@password" class="form-control">
+                @Html.ValidationMessage("password")
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">Bevestig wachtwoord</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" value="@confirmPassword" class="form-control">
+                @Html.ValidationMessage("confirmPassword")
+            </div>
+            <div class="from-group">
+                <button type="submit" class="btn btn-default">Registreer</button>
+            </div>
+        </fieldset>
+    </form>
+</div>
