--- a/ComeniusCarrousel/App_Code/Repository.cshtml
+++ b/ComeniusCarrousel/App_Code/Repository.cshtml
@@ -6,4 +6,17 @@
             db.Close();
         }
     }
+
+    public static List<Tuple<int, string>> GetDecanen()
+    {
+        List<Tuple<int, string>> decanen = new List<Tuple<int, string>>{};
+        var db = Database.Open("authenticationData");
+        var selectedData = db.Query("SELECT UserProfile.UserId, UserName FROM UserProfile INNER JOIN webpages_UsersInRoles ON UserProfile.UserId=webpages_UsersInRoles.UserId WHERE RoleId=2");
+        foreach (var row in selectedData)
+        {
+            decanen.Add(new Tuple<int, string> (row.UserId, row.UserName));
+        }
+        db.Close();
+        return decanen;
+    }
 }
