--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -1,25 +1,21 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "DecaanOverzicht";
-    var db = Database.Open("authenticationData");
-    var selectedData = db.Query("SELECT UserProfile.UserId, UserName FROM UserProfile INNER JOIN webpages_UsersInRoles ON UserProfile.UserId=webpages_UsersInRoles.UserId WHERE RoleId=2");
-    var grid = new WebGrid(source: selectedData);
-    
+    List<Tuple<int, string>> decanen = Repository.GetDecanen();
 }
 
 <a class="btn btn-default" href="~/Admin/Decaan/DecaanToevoegen">
     <span class="glyphicon glyphicon-pencil"></span> Nieuwe decaan aanmaken
 </a>
 
-            @grid.GetHtml(
-       tableStyle: "grid",
-        headerStyle: "head",
-        alternatingRowStyle: "alt",
-            columns: grid.Columns(
-                
-                grid.Column("UserName"),
-                grid.Column(format: @<a href="~/Admin/Decaan/DecaanWijzigen?id=@item.UserId">&nbsp; Edit</a>)
-                )
-            )
+<table class="table">
+    @foreach (Tuple<int, string> decaan in decanen)
+    {
+        <tr>
+            <td><a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">&nbsp; Edit</a></td>
+            <td>@decaan.Item2</td>
+        </tr>
+    }
+</table>
 
 
