Comments, LeerlingDetails added voor minder code-duplicatie, kleine fixes voor Keuze

--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -6,7 +6,8 @@
     {
         Response.Redirect("~/");
     }
-    List<Tuple<int, string>> decanen = Repository.GetDecanen();
+
+    List<Tuple<int, string>> decanen = Repository.GetDecanen(); // Geeft het ID en username van alle decanen mee
 }
 
 <a class="btn btn-default" href="~/Admin/Decaan/DecaanToevoegen">
