--- a/ComeniusCarrousel/User_Management/Manage.cshtml
+++ b/ComeniusCarrousel/User_Management/Manage.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@*To be removed*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Manage my account";
     Page.Description = "Change your account information";   
