--- a/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanToevoegen.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
    Layout = "~/_Layout.cshtml";
-    Page.Title = "Register";
-    Page.Description = "Add an account";
-    Page.ShowTitle = "false";
+    Page.Title = "Decaan toevoegen";
 
     if (!User.IsInRole("Admin"))
     {
@@ -13,9 +11,10 @@
     var password = "";
     var confirmPassword = "";
 
-    Validation.RequireField("userName", "U moet een gebruikersnaam invullen.");
+    Validation.RequireField("userName", "U moet een gebruiker invullen.");
     Validation.RequireField("password", "Er moet een wachtwoord ingevuld worden.");
     Validation.RequireField("confirmPassword", "Bevestegings wachtwoord mag niet leeg zijn.");
+
     Validation.Add("confirmPassword",
         Validator.EqualsTo("password", "Bevestegings wachtwoord komt niet overeen met het wachtwoord."));
     Validation.Add("password",
@@ -26,7 +25,7 @@
     Validation.Add("userName",
         Validator.StringLength(
             maxLength: 400,
-            errorMessage: "Uw e mail kan niet meer dan 400 tekens bevatten"));
+            errorMessage: "gebruiker kan niet meer dan 400 tekens bevatten"));
 
     if(IsPost)
     {
@@ -59,7 +58,7 @@
             }
             else
             {
-                ModelState.AddFormError("Gebruikersnaam bestaat al");
+                ModelState.AddFormError("Gebruiker bestaat al");
             }
             db.Close();
         }
