--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@*Wordt standaard zo goed als overal aan geroepen*@
+@{
 }
 
 <!DOCTYPE html>
@@ -6,7 +7,7 @@
     <head>
         <meta charset="utf-8" />
         <title>@Page.Title</title>
-        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+        <link rel="icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="~/css/bootstrap.css" type="text/css">
         <link href="~/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
