--- a/ComeniusCarrousel/App_Code/VakRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/VakRepo.cshtml
@@ -35,14 +35,19 @@
         }
     }
 
-    public static List<Vak> GetVakken(string niveau = "Default")
+    public static List<Vak> GetVakken(string niveau = "Default", string talentstroomVak = "")
     {
         List<Vak> vakken = new List<Vak>();
         var db = Database.Open(App.DataBase);
         var data = db.Query((niveau == "Default" ? "SELECT * FROM Vak" : "SELECT * FROM Vak WHERE Niveau = @0"), niveau);
         foreach(var row in data)
         {
-            vakken.Add(new Vak(row.VakId, row.VakNaam, row.Niveau));
+            if (row.VakNaam == talentstroomVak)
+            {}
+            else
+            {
+                vakken.Add(new Vak(row.VakId, row.VakNaam, row.Niveau));
+            }
         }
         return vakken;
     }
